tests/error/linear_errors/mutable_affine_struct1.py
from guppylang.decorator import guppy
from guppylang.std.builtins import owned


@guppy.struct(frozen=False)
class MyStruct:
    x: int


@guppy
def foo(s: MyStruct @owned) -> MyStruct:
    t = s
    return s


foo.compile()
