tests/error/linear_errors/mutable_affine_struct1.err
Error: Copy violation (at $FILE:13:11)
   | 
11 | def foo(s: MyStruct @owned) -> MyStruct:
12 |     t = s
13 |     return s
   |            ^ Variable `s` cannot be returned ...

Note:
   | 
11 | def foo(s: MyStruct @owned) -> MyStruct:
12 |     t = s
   |         - ... since variable `s` with non-copyable type `MyStruct` was
   |           already moved here

Guppy compilation failed due to 1 previous error
